@@ -8,7 +8,7 @@
   <property name="msi" value="jfcraft"/>
   <property name="src" location="src/base"/>
   <property name="build" location="classes"/>
-  <property name="version" value="0.26"/>
+  <property name="version" value="0.27"/>
 
   <property name="project2" value="build-server"/>
 
